@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.675 2005-06-05 18:26:47 castaglia Exp $
+$Id: NEWS,v 1.676 2005-06-08 18:33:59 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -31,6 +31,7 @@ CVS
 - Bug 2578 - ProFTPD does not listen on IPv6 addresses on FreeBSD.
 - Bug 2624 - "fh_data" macro collision causes compiler error on Tru64 V5.1A.
 - Bug 2250 - Add ports, compiling info to FreeBSD README.
+- Bug 2631 - Segfault when using RadiusAcctServer.
 
 1.3.0rc1 - Released 10-Apr-2005
 --------------------------------
